# gemm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_gemm.bat  build_setup.bat  build_tests.bat
bench/: CMakeLists.txt  bench_cublas_fp16.cu  bench_cublas_fp32.cu  bench_cublas_fp8.cu  bench_fp8.cu  bench_main.cpp  bench_results.hpp  bench_suite.cpp
cmake/: CompileOptions.cmake  CudaArchUtils.cmake
hip/: CMakeLists.txt  gfx1200_results.csv  test_headers.hip
hip/bench/: CMakeLists.txt  bench_main.cpp  bench_results.hpp  bench_rocblas_fp16.hip  bench_rocblas_fp32.hip  bench_suite.cpp
hip/cmake/: HipCompileOptions.cmake
hip/docs/: port_notes.md
hip/include/gemm/: benchmark.hpp  error_check.hpp  hip_helpers.hpp  matrix.hpp  pipeline.hpp  swizzle.hpp  timer.hpp  types.hpp
hip/kernels/: dispatch.hpp
hip/kernels/phase0_naive/: CMakeLists.txt  gemm_naive.hpp  gemm_naive_fp16.hip  gemm_naive_fp32.hip
hip/kernels/phase1_tiling/: CMakeLists.txt  gemm_shmem.hpp  gemm_shmem_fp16.hip  gemm_shmem_fp32.hip
hip/kernels/phase2_swizzle/: CMakeLists.txt  gemm_swizzle.hpp  gemm_swizzle_fp16.hip  gemm_swizzle_fwd.hpp
hip/kernels/phase3_wmma/: CMakeLists.txt  gemm_wmma.hpp  gemm_wmma_fp16.hip  gemm_wmma_fwd.hpp
hip/kernels/phase4_pipeline/: CMakeLists.txt  gemm_pipeline.hpp  gemm_pipeline_fp16.hip  gemm_pipeline_fwd.hpp
hip/tests/: CMakeLists.txt  test_correctness.hpp  test_main.cpp  test_phase0.cpp  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp
include/: gemm_kernels.cuh
include/gemm/: benchmark.cuh  cuda_helpers.cuh  error_check.cuh  matrix.cuh  pipeline.cuh  swizzle.cuh  timer.cuh  types.cuh
kernels/: dispatch.cuh
kernels/phase0_naive/: CMakeLists.txt  gemm_naive.cuh  gemm_naive_fp16.cu  gemm_naive_fp32.cu
kernels/phase1_shmem/: gemm_shmem_fp16.cu  gemm_shmem_fp32.cu
kernels/phase1_tiling/: CMakeLists.txt  gemm_shmem.cuh
kernels/phase2_swizzle/: CMakeLists.txt  gemm_swizzle.cuh  gemm_swizzle_fp16.cu
kernels/phase3_wmma/: CMakeLists.txt  gemm_wmma.cuh  gemm_wmma_fp16.cu
kernels/phase4_cp_async/: gemm_pipeline.cuh  gemm_pipeline_fp16.cu
kernels/phase4_pipeline/: CMakeLists.txt  gemm_pipeline.cuh
kernels/phase5_ptx/: CMakeLists.txt  gemm_mma_ptx.cuh  mma_ptx_utils.cuh
kernels/phase5_ptx_mma/: gemm_mma_ptx.cuh  gemm_mma_ptx_fp16.cu
kernels/phase6_advanced/: CMakeLists.txt  gemm_cpasync.cuh  gemm_cpasync_fp16.cu  gemm_ldmatrix.cuh  gemm_ldmatrix_fp16.cu  gemm_tma_mmasync.cuh  gemm_tma_mmasync_fp16.cu  ldmatrix_utils.cuh
kernels/phase6_hopper/: CMakeLists.txt  gemm_hopper.cu  gemm_tma.cuh  gemm_wgmma.cuh
kernels/phase6a_ldmatrix/: CMakeLists.txt  gemm_ldmatrix.cuh  ldmatrix_utils.cuh
kernels/phase6b_multistage/: CMakeLists.txt  gemm_cpasync.cuh
kernels/phase6c_tma/: CMakeLists.txt  gemm_tma.cuh  gemm_tma_mmasync.cuh  gemm_tma_mmasync_fp16.cu
kernels/phase6e_fp8/: CMakeLists.txt  fp8_mma_probe.cuh  fp8_tma_utils.cuh  gemm_fp8.cuh  gemm_fp8_e4m3.cu
python/: harness.py  plot.py  reference.py  report.py  requirements.txt  runner.py  sweep.py
tests/: CMakeLists.txt  test_correctness.cuh  test_main.cpp  test_phase0.cpp  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase5_diag.cu  test_phase5_micro.cu  test_phase6a.cpp  test_phase6b.cpp  test_phase6c.cpp  test_phase6e.cpp  tolerance.hpp
tools/: CMakeLists.txt  probe_fp4.ptx  tma_swizzle_probe.cu
tools/profile/: ncu_metrics.txt  ncu_profile.sh  parse_ncu_csv.py
tools/roofline/: hw_limits.py  roofline.py
tools/sass/: annotate_sass.py  dump_sass.sh
