cmake_minimum_required(VERSION 3.21)
project(GemmHip LANGUAGES CXX HIP)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_HIP_STANDARD 17)
set(CMAKE_HIP_STANDARD_REQUIRED ON)

find_package(hip REQUIRED)
find_package(rocblas REQUIRED)

include(cmake/HipCompileOptions.cmake)

add_subdirectory(kernels/phase0_naive)
add_subdirectory(kernels/phase1_tiling)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/kernels/phase2_swizzle/CMakeLists.txt)
    add_subdirectory(kernels/phase2_swizzle)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/kernels/phase3_wmma/CMakeLists.txt)
    add_subdirectory(kernels/phase3_wmma)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/kernels/phase4_pipeline/CMakeLists.txt)
    add_subdirectory(kernels/phase4_pipeline)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/bench/CMakeLists.txt)
    add_subdirectory(bench)
endif()

enable_testing()
add_subdirectory(tests)
